More proofreading chapter

--- a/tex/25.tex
+++ b/tex/25.tex
@@ -233,7 +233,7 @@ steps.
 We use \ufl\ for the declaration of the finite element discretization
 of the variational forms related to the models mentioned above (see
 the \ufl\ form files in the following directories of the DOLFWAVE code
-tree: \emp{dolfwave/src/1hd1sforms}, \emp{dolfwave/src/1hdforms} and\\
+tree: \emp{dolfwave/src/1hd1sforms}, \emp{dolfwave/src/1hdforms} and
 \emp{dolfwave/src/2hdforms}).  These files are compiled using \ffc to
 generate the C++ code of the finite element discretization of the
 variational forms (see Chapter~\ref{chap:alnes-1}).  DOLFWAVE is based
@@ -265,7 +265,7 @@ of an incompressible and inviscid fluid:
   \\ &\nabla\cdot{u}=0,\label{eq:lopes:euler-c}
 \end{align}
 \end{subequations}
-
+%%
 where $u$ is the velocity vector field of the fluid, $P$ the pressure,
 $g$ the gravitational acceleration, $\rho$ the mass per unit volume,
 $t$ the time and the differential operator
@@ -297,7 +297,7 @@ $\phi(x,y,z,t)$\index{potential} to obtain Bernoulli's equation:\vspace*{-4pt}
 \frac{\partial \phi}{\partial t}+\frac{1}{2}\nabla \phi \cdot\nabla
 \phi + \frac{P}{\rho} +g\, z=f(t),\vspace*{-4pt}
 \end{equation}
-
+%%
 where $u=\nabla\phi(x,y,z,t)$ and $f(t)$ stands for an arbitrary
 function of integration.  Note that we can remove $f(t)$ from
 equation~\eqref{eq:lopes:bern} if $\phi$ is redefined by $\phi+\int
@@ -308,9 +308,7 @@ Laplace's equation:\vspace*{-4pt}
   \label{eq:lopes:lap}
   \nabla^2\phi+\frac{\partial^2\phi}{\partial z^2}=0,\vspace*{-4pt}
 \end{equation}
-
-
-
+%%
 where, from now on, $\nabla$ denotes the horizontal gradient operator
 given by $\nabla=\left(\frac{\partial }{\partial
     x},\frac{\partial}{\partial y}\right)\!\!.$ To close this problem,
@@ -1001,7 +999,7 @@ In the above expressions $x_s$ is the center line of the source function
 and $\beta$ is a parameter associated with the width of the generation
 band (see \citet{WeiKirbySinha1999}).  Note that $S(x,t)$ should be added
 to the right-hand side of equation~\eqref{eq:lopes:ztc-a}.  A DOLFWAVE
-demo code for an example of wave generation using a this source function
+demo code for an example of wave generation using  this source function
 is available at \emp{dolfwave/demo/2HD/srcFunction}.
 
 \section{Reflective walls and sponge layers}
@@ -2085,7 +2083,7 @@ first approach to a fourth-order spatial derivative model, using a
 continuous/discontinuous Galerkin finite element method, can be found
 in~\citet{LopesPereiraTrabucho}.
 
-We have been developing DOLFWAVE which is \fenics based application
+We have been developing DOLFWAVE which is a \fenics based application
 for surface water wave models. This package already includes some
 models with equations containing spatial derivatives of order~$4$.
 The current state of the work, along with several numerical
