Some grad vs nabla fixes

--- a/book.tex
+++ b/book.tex
@@ -40,18 +40,18 @@
 
 % Part I: Methodology
 %\input{tex/Part1}
-\input{tex/2}
+%\input{tex/2}
 %\input{tex/3}
 %\input{tex/4}
-\input{tex/5}
+%\input{tex/5}
 %\input{tex/6}
 %\input{tex/7}
-\input{tex/8}
-\input{tex/9}
+%\input{tex/8}
+%\input{tex/9}
 
 % Part II: Implementation
 %\input{tex/Part2}
-\input{tex/10}
+%\input{tex/10}
 %\input{tex/11}
 %\input{tex/12}
 %\input{tex/13}
@@ -59,17 +59,17 @@
 %\input{tex/15}
 %\input{tex/16}
 %\input{tex/17}
-\input{tex/18}
+%\input{tex/18}
 %\input{tex/19}
 
 % Part III: Applications
 %\input{tex/Part3}
 
 % flow problems
-\input{tex/20}
-\input{tex/21}
-\input{tex/22}
-\input{tex/23}
+%\input{tex/20}
+%\input{tex/21}
+%\input{tex/22}
+%\input{tex/23}
 \input{tex/24}
 \input{tex/25}
 
