--- a/tex/10.tex
+++ b/tex/10.tex
@@ -1668,7 +1668,7 @@ This should be compared to the corresponding mathematical notation:
   L(v)    &= \int_{\Omega} f \cdot v \dx.
 \end{align}
 %%
-Here, $\epsilon(v) = (\nabla v + (\nabla v)^{T}) / 2$ denotes the
+Here, $\epsilon(v) = (\Grad v + (\Grad v)^{T}) / 2$ denotes the
 symmetric gradient and $\sigma(v) = 2 \mu \, \epsilon(v) + \lambda
 \mathrm{tr} \, \epsilon(v) I$ is the stress tensor. For a detailed
 presentation of the UFL form language, we refer to
@@ -1854,9 +1854,9 @@ displacement of an elastic body may be expressed as
 %%
 \begin{equation} \label{eq:logg-2:elasticity}
   \begin{array}{rcll}
-    - \nabla \cdot \sigma(u) &=& f \quad &\mbox{in } \Omega,
+    - \Div \sigma(u) &=& f \quad &\mbox{in } \Omega,
     \\
-    \sigma n &=& g \quad  &\mbox{on } \Gamma_{\mathrm{N}} \subset \partial\Omega,
+    \sigma \cdot n &=& g \quad  &\mbox{on } \Gamma_{\mathrm{N}} \subset \partial\Omega,
     \\
     u &=& u_0 \quad  &\mbox{on } \Gamma_{\mathrm{D}} \subset \partial\Omega,
     \end{array}
@@ -1871,13 +1871,13 @@ parts, we obtain
 %%
 \begin{equation}
   \int_{\Omega} \sigma(u) : \epsilon(v) \dx - \int_{\partial\Omega}
-  \sigma n \cdot v \ds = \int_{\Omega} f \cdot v \dx,
+  (\sigma \cdot n) \cdot v \ds = \int_{\Omega} f \cdot v \dx,
 \end{equation}
 %%
-where we have used the symmetry of $\sigma(u)$ to replace $\nabla v$
+where we have used the symmetry of $\sigma(u)$ to replace $\Grad v$
 by the symmetric gradient $\epsilon(v)$. Since the displacement~$u$
 is known on the Dirichlet boundary $\Gamma_{\mathrm{D}}$, we let $v =
-0$ on~$\Gamma_{\mathrm{D}}$. Furthermore, we replace $\sigma n$ by the
+0$ on~$\Gamma_{\mathrm{D}}$. Furthermore, we replace $\sigma \cdot n$ by the
 given traction~$g$ on the remaining (Neumann) portion of the boundary
 $\Gamma_{\mathrm{N}}$ to obtain
 %%
