--- a/tex/24.tex
+++ b/tex/24.tex
@@ -115,7 +115,7 @@ Navier--Stokes  equations for an incompressible
 Newtonian fluid,
 \begin{equation}
   \begin{split}
-    \rho \left(\frac{\partial v}{\partial t} + \nabla v \cdot v \right)
+    \rho \left(\frac{\partial v}{\partial t} + v \cdot \nabla v \right)
           &= -\nabla p + \mu \Delta v + g,
     \\
     \nabla \cdot v &= 0,
