--- a/tex/25.tex
+++ b/tex/25.tex
@@ -258,7 +258,7 @@ of an incompressible and inviscid fluid:
 
 \begin{subequations}\label{eq:lopes:euler}
 \begin{align}
-&\displaystyle\frac{\partial u}{\partial t}+\nabla u \,
+&\displaystyle\frac{\partial u}{\partial t}+ u \cdot \nabla
   u=-\nabla\left(\frac{P}{\rho} +g\,
   z\right),\label{eq:lopes:euler-a} \\ &\nabla\times
   u={0},\label{eq:lopes:euler-b}
