--- a/tex/5.tex
+++ b/tex/5.tex
@@ -135,11 +135,13 @@ pressure~$p$ of an incompressible fluid read:
 \end{equation}
 where the stress tensor~$\sigma$ is given by $\sigma(u, p) = 2 \mu
 \epsilon(u) - p I$, $\epsilon$ is the symmetric gradient; that is,
-$\epsilon(u) = \frac{1}{2}(\Grad u + (\Grad u)^{\top})$, $\rho$ is
-the fluid density and $f$ is a body force.
-Consider here the form obtained by
-integrating the nonlinear term $\Grad u \cdot u$ against a test
-function $v$:
+$\epsilon(u) = \frac{1}{2}(\Grad u + (\Grad u)^{\top})$, $\rho$ is the
+fluid density and $f$ is a body force.\footnote{For a discussion of
+the definition of the operators $\Grad$ and $\nabla$ for a
+vector-valued function, see Chapter~\ref{chap:alnes-1}. Note that for
+a vector-valued function $u$, we have $\Grad u \cdot u =
+u \cdot \nabla u$.} Consider here the form obtained by integrating
+the nonlinear term $\Grad u \cdot u$ against a test function $v$:
 \begin{equation}
   a(u; v) = \int_{\Omega} (\Grad u \cdot u) \cdot v \dx.
 \end{equation}
@@ -181,8 +183,8 @@ lift and drag are given by the $z$- and $x$-components of the force
 generated on the object (for a flow in the $x$-direction):
 \begin{equation}
   \begin{split}
-    L_{\mathrm{lift}}(u, p;) &= \int_{\Gamma} \sigma(u, p) n \cdot e_z \ds, \\
-    L_{\mathrm{drag}}(u, p;) &= \int_{\Gamma} \sigma(u, p) n \cdot e_x \ds.
+    L_{\mathrm{lift}}(u, p;) &= \int_{\Gamma} (\sigma(u, p) \cdot n) \cdot e_z \ds, \\
+    L_{\mathrm{drag}}(u, p;) &= \int_{\Gamma} (\sigma(u, p) \cdot n) \cdot e_x \ds.
   \end{split}
 \end{equation}
 Here, $\Gamma$ is the boundary of the body, $n$ is the outward
