Minor fix in chapter 2

--- a/book.tex
+++ b/book.tex
@@ -70,8 +70,8 @@
 %\input{tex/21}
 %\input{tex/22}
 %\input{tex/23}
-\input{tex/24}
-\input{tex/25}
+%\input{tex/24}
+%\input{tex/25}
 
 % solid mechanics
 \input{tex/26}
