--- a/tex/2.tex
+++ b/tex/2.tex
@@ -270,7 +270,7 @@ of a \emph{mixed method}. Such formulations require some care in
 selecting spaces that discretize the different function spaces, here
 $L^2$ and $H(\mathrm{div})$, in a compatible way.  Stable
 discretizations must satisfy the so-called \emph{inf--sup} or
-Ladyzhenskaya--\babuska{}--Brezzi (LBB) conditions. This theory
+Ladyzhenskaya--\babuska{}--Brezzi (LBB) condition(s). This theory
 explains why many of the finite element spaces for mixed methods seem
 complicated compared to those for standard methods. In
 Chapter~\ref{chap:kirby-6} below, we give several examples of such
