Fix horunge in Chapter 26

--- a/tex/26.tex
+++ b/tex/26.tex
@@ -1588,5 +1588,7 @@ problems within the automated framework.
 and hexahedral elements, which are currently not supported, and to
 elements with higher order mappings that allow curved mesh boundaries
 to be represented.
+\enlargethispage{12pt}
 \end{description}
+
 %------------------------------------------------------------------------------
