Uncomment all chapters and fix "all" relevant warnings

--- a/tex/27.tex
+++ b/tex/27.tex
@@ -1161,8 +1161,8 @@ the fish deforms elastically as it tumbles toward the right.
 \bwfig
   \ffigbox{\caption{The motion of a hyperelastic dolphin being forced to the
       right. Careful observation of the tail fin shows deformation of
-      the dolphin in addition to its overall motion toward the right.}
-    \label{fig:narayanan:tumblingdolphin}}{}
+      the dolphin in addition to its overall motion toward the right.
+      \label{fig:narayanan:tumblingdolphin}}}{}
   \ffigbox{}
           {
             \subfloat[$t = 0.0$ s]{
