--- a/book.tex
+++ b/book.tex
@@ -36,42 +36,42 @@
 % Chapters
 
 % Tutorial
-%\input{tex/1}
+\input{tex/1}
 
 % Part I: Methodology
-%\input{tex/Part1}
-%\input{tex/2}
-%\input{tex/3}
-%\input{tex/4}
-%\input{tex/5}
-%\input{tex/6}
-%\input{tex/7}
-%\input{tex/8}
-%\input{tex/9}
+\input{tex/Part1}
+\input{tex/2}
+\input{tex/3}
+\input{tex/4}
+\input{tex/5}
+\input{tex/6}
+\input{tex/7}
+\input{tex/8}
+\input{tex/9}
 
 % Part II: Implementation
-%\input{tex/Part2}
-%\input{tex/10}
-%\input{tex/11}
-%\input{tex/12}
-%\input{tex/13}
-%\input{tex/14}
-%\input{tex/15}
-%\input{tex/16}
-%\input{tex/17}
-%\input{tex/18}
-%\input{tex/19}
+\input{tex/Part2}
+\input{tex/10}
+\input{tex/11}
+\input{tex/12}
+\input{tex/13}
+\input{tex/14}
+\input{tex/15}
+\input{tex/16}
+\input{tex/17}
+\input{tex/18}
+\input{tex/19}
 
 % Part III: Applications
-%\input{tex/Part3}
+\input{tex/Part3}
 
 % flow problems
-%\input{tex/20}
-%\input{tex/21}
-%\input{tex/22}
-%\input{tex/23}
-%\input{tex/24}
-%\input{tex/25}
+\input{tex/20}
+\input{tex/21}
+\input{tex/22}
+\input{tex/23}
+\input{tex/24}
+\input{tex/25}
 
 % solid mechanics
 \input{tex/26}
@@ -82,15 +82,15 @@
 \input{tex/29}
 
 % misc applications
-%\input{tex/30}
-%\input{tex/31}
-%\input{tex/32}
-%\input{tex/33}
-%\input{tex/34}
+\input{tex/30}
+\input{tex/31}
+\input{tex/32}
+\input{tex/33}
+\input{tex/34}
 
 % misc techniques
-%\input{tex/35}
-%\input{tex/36}
+\input{tex/35}
+\input{tex/36}
 
 %------------------------------------------------------------------------------
 % Start backmatter
